Fix scroll overflow in firefox

--- a/test/local/index.css
+++ b/test/local/index.css
@@ -50,7 +50,7 @@ body > h1 {
 #scrollable > h1  {
     position: sticky;
     z-index: 1;
-    width: 100%;
+    width: 50vw;
     top: 10%;
     left: 20%;
 }
